--- a/oduller/sayfa.css
+++ b/oduller/sayfa.css
@@ -26,3 +26,12 @@ input::-webkit-inner-spin-button {
 #odtx {
   margin: 1em 0;
 }
+
+#odconfetti {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+}
