--- a/oduller/sayfa.css
+++ b/oduller/sayfa.css
@@ -30,18 +30,21 @@ input::-webkit-inner-spin-button {
   left: 0;
   width: 100%;
   height: 100vh;
-  z-index: -1;
+  z-index: -2;
 }
 
 .odtxl {
   font-family: monospace;
   word-break: break-all;
   font-size: 0.9em;
-  color: #3d67ab;
+  color: rgb(61, 103, 171);
   position: relative;
-  padding-left: 1em;
+  padding: 0.5em ;
+  background-color: rgba(110, 110, 110, 0.25);
+  border-radius: 5px;
 }
 
 .odtxl:hover {
-  opacity: 0.8;
+  color: rgb(81, 138, 230);
+  background-color: rgba(50, 50, 50);
 }
