En sondaki kutuya pop-up özelliği eklendi

--- a/oduller/sayfa.css
+++ b/oduller/sayfa.css
@@ -48,3 +48,31 @@ input::-webkit-inner-spin-button {
   color: rgb(81, 138, 230);
   background-color: rgba(50, 50, 50);
 }
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  z-index: 5;
+}
+
+.modal.active {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+#overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  opacity: 0;
+  transition: 200ms ease-in-out;
+  background-color: rgba(0,0,0,0.5);
+  pointer-events: none;
+}
+#overlay.active {
+  opacity: 1;
+  pointer-events: all;
+}
