--- a/oduller/sayfa.css
+++ b/oduller/sayfa.css
@@ -24,24 +24,67 @@ input::-webkit-inner-spin-button {
   margin: 1em 0 1.25em;
 }
 
+#odtxf {
+  margin: 1em 0 1.25em;
+}
+
 #odconfetti {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100vh;
-  z-index: -1;
+  z-index: 5;
 }
 
 .odtxl {
   font-family: monospace;
   word-break: break-all;
   font-size: 0.9em;
-  color: #3d67ab;
+  color: rgb(61, 103, 171);
   position: relative;
-  padding-left: 1em;
+  padding: 0.5em ;
+  background-color: rgba(110, 110, 110, 0.25);
+  border-radius: 5px;
 }
 
 .odtxl:hover {
-  opacity: 0.8;
+  color: rgb(81, 138, 230);
+  background-color: rgba(50, 50, 50);
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  z-index: 2;
+}
+
+.modal.active {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+#overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  opacity: 0;
+  transition: 750ms ease-in-out;
+  background-color: rgba(0,0,0,0.5);
+  pointer-events: none;
+}
+
+#overlay.active {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.discord-link {
+  color:rgb(61, 103, 171);
+  text-decoration: underline;
+  text-underline-offset: 0.15rem;
+  font-weight: bold;
 }
